<resources>

    <!-- LoginActivity Strings-->
    <string name="app_name">Smart Bike Part 1</string>
    <string name="usersKeyJared">jared</string>
    <string name="usersValJared">jared</string>
    <string name="usersKeyBlank"></string>
    <string name="usersValBlank"></string>
    <string name="username">username</string>
    <string name="usernameHint">email</string>
    <string name="passwordHint">password</string>
    <string name="setPasswordHint">set password</string>
    <string name="loginText">login</string>
    <string name="nextText">Enter</string>
    <string name="register">register</string>
    <string name="registerError">Error. Please check email and try again.</string>
    <string name="registerToast">Username not recognized. Please register.</string>
    <string name="registerThanks">Thanks for registering!</string>
    <string name="incorrectLogin">Incorrect password. Try again.</string>
    <string name="somethingWrong">Something is wrong. Check email and try again.</string>

    <!-- ControlActivity Strings-->
    <string name="bikeID"> Bike ID: \u0020</string>
    <string name="status"> Status:\u0020</string>
    <string name="on"> on</string>
    <string name="auto">auto</string>
    <string name="blinking">blink</string>
    <string name="solid">solid</string>
    <string name="lightState">Light State</string>
    <string name="lightMode">Light Mode</string>
    <string name="connected">connected</string>
    <string name="notConnected">not connected</string>
    <string name="history">history</string>
    <string name="unlock">unlock</string>
    <string name="lock">lock</string>

    <!-- AlertDialog Strings-->
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
    <string name="inputMACAddress">Input MAC Address:</string>

    <!-- RideHistoryActivity Strings -->
    <string name="addLocation">Input ride location:</string>
    <string name="addRide">Add Ride</string>
    <string name="pleaseAddLoc">Please add location of ride and try again</string>

</resources>
