<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.me202.jaredostdiek.smartbikepart1.ControlActivity"
    android:background="@color/whitesmoke"
    android:id = "@+id/controlLayout">

    <TextView
        android:id="@+id/bikeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/connectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        />

    <Button
        android:id="@+id/unlockButton"
        android:layout_width="250dp"
        android:textSize="25sp"
        android:layout_height="100dp"
        android:text="@string/unlock"
        android:layout_marginTop="58dp"
        android:background="@color/darkgray"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@id/connectionState"
        android:layout_alignLeft="@+id/toggleLightState"
        android:layout_alignStart="@id/toggleLightState"
        android:textColor="@color/whitesmoke"
        />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="250dp"
        android:textSize="25sp"
        android:layout_height="50dp"
        android:text="@string/history"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/green"
        android:textColor="@color/whitesmoke"
        />

    <ToggleButton
        android:id="@+id/toggleLightState"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/toggle_selector"
        android:checked="false"
        android:button="@null"
        android:textOff=""
        android:textOn=""
        android:layout_below="@id/unlockButton"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/autoTextView"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auto"
        android:layout_alignTop="@+id/onTextView"
        android:layout_alignLeft="@id/toggleLightState"
        android:gravity="center"
         />

    <TextView
        android:id="@id/onTextView"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/on"
        android:gravity="center"
        android:layout_below="@id/toggleLightState"
        android:layout_alignRight="@id/toggleLightState"
        android:layout_alignEnd="@id/toggleLightState"
        />

    <ToggleButton
        android:id="@+id/toggleLightMode"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/toggle_selector"
        android:checked="false"
        android:button="@null"
        android:textOff=""
        android:textOn=""
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toggleLightState"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/solidTextView"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/solid"
        android:gravity="center"
        android:layout_alignTop="@+id/blinkingTextView"
        android:layout_alignLeft="@id/toggleLightMode"
        android:layout_alignStart="@id/toggleLightMode"
        />

    <TextView
        android:id="@+id/blinkingTextView"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/blinking"
        android:gravity="center"
        android:layout_below="@id/toggleLightMode"
        android:layout_alignLeft="@id/onTextView"
        android:layout_alignStart="@id/onTextView"
        />

    <TextView
        android:id="@+id/stateTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lightState"
        android:layout_alignBottom="@id/toggleLightState"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/modeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lightMode"
        android:layout_alignBottom="@id/toggleLightMode"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
