<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.me202.jaredostdiek.smartbikepart1.LoginActivity"
    android:background="@color/green">


    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:textAlignment="center"
        android:hint="@string/usernameHint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:textColor="@color/whitesmoke"
        android:textColorHint="@color/whitesmoke"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:textAlignment="center"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:textColor="@color/whitesmoke"
        android:textColorHint="@color/whitesmoke"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:textSize="12pt"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/whitesmoke"
        android:textColor="@color/darkgray"
        />

</RelativeLayout>
